@startuml ER图
skinparam backgroundColor #FEFEFE
skinparam classAttributeIconSize 0

title 数据库实体关系图 (ER Diagram)

entity "users\n用户表" as Users {
  * id : INTEGER <<PK>>
  --
  * username : TEXT <<UQ>>
  * password : TEXT
  name : TEXT
  phone : TEXT
  email : TEXT
  child_name : TEXT
  * role : TEXT [default: 'user']
}

entity "courses\n课程表" as Courses {
  * id : INTEGER <<PK>>
  --
  * name : TEXT
  description : TEXT
  total_hours : INTEGER
  price : REAL
  start_time : TEXT
  end_time : TEXT
  max_students : INTEGER
  current_students : INTEGER [default: 0]
}

entity "enrollments\n报名记录表" as Enrollments {
  * id : INTEGER <<PK>>
  --
  * user_id : INTEGER <<FK>>
  * course_id : INTEGER <<FK>>
  status : TEXT [default: 'pending']
  payment_amount : REAL
  payment_time : TEXT
  attendance_count : INTEGER [default: 0]
}

entity "attendances\n签到记录表" as Attendances {
  * id : INTEGER <<PK>>
  --
  * enrollment_id : INTEGER <<FK>>
  class_date : TEXT
  class_number : INTEGER
  status : TEXT [default: 'absent']
}

entity "alternate_courses\n备选课程表" as Alternates {
  * id : INTEGER <<PK>>
  --
  * enrollment_id : INTEGER <<FK>>
  * course_id : INTEGER <<FK>>
  status : TEXT [default: 'pending']
}

entity "messages\n消息表" as Messages {
  * id : INTEGER <<PK>>
  --
  * sender_id : INTEGER <<FK>>
  * receiver_id : INTEGER <<FK>>
  content : TEXT
  created_at : TEXT [default: CURRENT_TIMESTAMP]
  status : TEXT [default: 'unread']
}

' 关系
Users ||--o{ Enrollments : "1:N 报名"
Courses ||--o{ Enrollments : "1:N 被报名"
Enrollments ||--o{ Attendances : "1:N 签到"
Enrollments ||--o{ Alternates : "1:N 备选"
Users ||--o{ Messages : "1:N 发送"
Users ||--o{ Messages : "1:N 接收"
Courses ||--o{ Alternates : "1:N 作为备选"

note right of Enrollments
  status 枚举值：
  - pending: 待缴费
  - paid: 已缴费
end note

note right of Attendances
  status 枚举值：
  - present: 出勤
  - absent: 缺勤
  - leave: 请假
end note

note right of Messages
  status 枚举值：
  - unread: 未读
  - read: 已读
end note

note bottom of Users
  role 枚举值：
  - admin: 管理员
  - user: 普通用户
end note

@enduml